--- a/src/main/webapp/pages/project-create.html
+++ b/src/main/webapp/pages/project-create.html
@@ -10,15 +10,6 @@
     <link rel="stylesheet" href="css/multi-select.css" />
     <link rel="stylesheet" href="css/unicorn.main.css" />
     <link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />
-
-    <!--<link rel="stylesheet" href="css/bootstrap.min.css" />-->
-    <!--<link rel="stylesheet" href="css/bootstrap-responsive.min.css" />-->
-    <!--<link rel="stylesheet" href="css/colorpicker.css" />-->
-    <!--<link rel="stylesheet" href="css/datepicker.css" />-->
-    <!--<link rel="stylesheet" href="css/uniform.css" />-->
-    <!--<link rel="stylesheet" href="css/select2.css" />-->
-    <!--<link rel="stylesheet" href="css/unicorn.main.css" />-->
-    <!--<link rel="stylesheet" href="css/unicorn.grey.css" class="skin-color" />-->
 </head>
 <body>
 
@@ -150,7 +141,7 @@
 </div>
 
 
-
+<script src="js/lib/angular.min.js"></script>
 <script src="js/lib/excanvas.min.js"></script>
 <script src="js/lib/jquery-3.1.1.min.js"></script>
 <script src="js/lib/bootstrap-3.3.7.min.js"></script>
